
syntax = "proto3";
package game;

option go_package = "server/src/proto";

message Position {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Player {
  string id = 1;
  string name = 2;
  Position position = 3;
}

message Room {
  uint64 id = 1;
  string name = 2;
  repeated Player players = 3;
}

message LoginRequest {
}

message LoginResponse {
}

message GetRoomListRequest {
}

message GetRoomListResponse {
  int32 ret = 1;
  repeated Room rooms = 2;
}

message CreateRoomRequest {
  string name = 1;
}

message CreateRoomResponse {
  int32 ret = 1;
  Room room = 2;
}

message JoinRoomRequest {
  Player player = 1;
  string roomId = 2;
}

message JoinRoomResponse {
  int32 ret = 1;
  Room room = 2;
}

message MoveRequest {
  string playerId = 1;
  Position position = 2;
}

message MoveResponse {
  int32 ret = 1;
  Room room = 2;
}

message LeaveRoomRequest {
  string playerId = 1;
}

message LeaveRoomResponse {
  int32 ret = 1;
  Room room = 2;
}

message RoomStateNotification {
  Room room = 1;
}

enum ErrorCode {
  OK = 0;
  ROOM_NOT_FOUND = 1;
  ROOM_FULL = 2;
  PLAYER_NOT_FOUND = 3;
  PLAYER_ALREADY_IN_ROOM = 4;
}

enum MessageId {
  LOGIN_REQUEST = 0;
  LOGIN_RESPONSE = 1;

  GET_ROOM_LIST_REQUEST = 2;
  GET_ROOM_LIST_RESPONSE = 3;

  CREATE_ROOM_REQUEST = 4;
  CREATE_ROOM_RESPONSE = 5;

  JOIN_ROOM_REQUEST = 6;
  JOIN_ROOM_RESPONSE = 7;

  MOVE_REQUEST = 8;
  MOVE_RESPONSE = 9;

  LEAVE_ROOM_REQUEST = 10;
  LEAVE_ROOM_RESPONSE = 11;

  ROOM_STATE_NOTIFICATION = 12;
}

message Message {
  string uuid = 1;
  MessageId id = 2;
  bytes data = 3;
}








